@@ -223,6 +223,7 @@ sub finish_message
 	#	}
 	}
 
+	$self->{Signature}->prettify;
 	my $sig_line = $self->{Signature}->as_string_without_data;
 	my $canonicalized = $self->{canon}->canonicalize_header($sig_line);
 
