@@ -623,6 +623,40 @@ sub data
 
 *signature = \*data;
 
+=head2 prettify() - alters the signature to look "nicer" as an email header
+
+  $signature->prettify;
+
+This method may alter the signature in a way that breaks signatures, so
+it should be done ONLY when the signature is being generated, BEFORE being
+fed to the canonicalization algorithm.
+
+=cut
+
+sub prettify
+{
+	my $self = shift;
+	eval {
+		use Text::Wrap;
+		my $x = wrap($self->as_string);
+		$self->parse($x);
+	};
+}
+
+=head2 prettify_safe() - same as prettify() but only touches the b= part
+
+  $signature->prettify_safe;
+
+This method will not break the signature, but it only affects the b= part
+of the signature.
+
+=cut
+
+sub prettify_safe
+{
+	my $self = shift;
+}
+
 =head2 timestamp() - get or set the signature timestamp (t=) field
 
 Signature timestamp (default is undef, meaning unknown creation time).
