@@ -3,6 +3,8 @@ See the ChangeLog file for the details.
 
 Version 0.25
 
+ * we now only sign headers that IETF recommends for signing
+
 
 Version 0.24 - released 2007-03-13
 
